[package]
name = "depth_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
quotation = {path = "../../company/quotation"}
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }