[package]
name = "depth_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC client
name = "normal"
path = "src/normal.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "depth"
path = "src/depth.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "thread"
path = "src/thread.rs"


[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
quotation = {path = "../../company/quotation"}
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }